# qr-stl

./: 1.js  Cargo.toml  README.md  index.html  index.js  main.css
.github/workflows/: ci.yaml  gh-pages.yaml  release.yaml
qr-stl/: Cargo.toml
qr-stl-wasm/: Cargo.toml  package-lock.json  package.json  webpack.config.js
qr-stl-wasm/js/: index.js
qr-stl-wasm/src/: lib.rs
qr-stl-wasm/static/: index.html  main.css
qr-stl/src/: lib.rs
src/: geom.rs  main.rs
