[package]
name = "qr2stl"
version = "0.1.0"
edition = "2018"

authors = ["lf- <lf-@users.noreply.github.com>"]

[workspace]
members = ["qr-stl-wasm"]

[dependencies]
qr-stl = { path = "./qr-stl" }
structopt = "0.3.15"

# I don't know how to limit this to wasm but my perf is good enough so meh
[profile.release]
opt-level = "z"